fix: wordwrap in (un)ordered list

--- a/assets/scss/partials/components/_post.scss
+++ b/assets/scss/partials/components/_post.scss
@@ -147,6 +147,7 @@
     ol {
       line-height: 1.9em;
       font-weight: 400;
+      word-wrap: break-word;
     }
 
     img {
